# create-multiple-fonts

./: pyproject.toml
src/create-variant-font/: create_font.py  sort_glyphs.py  synthetic_data.py
src/create_variant_font/: sort_glyphs.py  synthetic_data.py
tests/: test_synthetic_data.py
